# metered-api-server

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  api_key_data.db  api_key_data.db-shm  api_key_data.db-wal  docker-compose.override.yaml  docker-compose.prod.yaml  docker-compose.yaml  pg_password.txt
.github/workflows/: rust-clippy.yml
.sqlx/: query-4d70f83d4d7dee949955faa778d96c4fac304d2a890f273837d438ae01f843b1.json  query-659f61c6da54d46d6418dd1e719dd0184ce4c57323f512691ccddcb42e92ce47.json  query-887b45e47d8174c34504b69ef6946c7bd375f91b16d0b61c0d91a03dc5d5e73b.json  query-ae83bca80b73b4d617341fb5bc4caf9a14ed3722009504124c602eec1dfb7a4a.json  query-bab75af6b506968e4e1877c7bc0c31a0a72da1b84550c284f6a4986588946037.json  query-e70a1906229ec2456a19682bef64964af808714ad8a44effff39cb181ea1ace0.json  query-e9b8855f0fd12edbfcab57c92697c65e4993866de63a95b07146626ac622c5a7.json  query-eb528f0130ca699297b3ab94a9b29cf22a07478c145ace0fd25a6647e199aa3a.json
migrations/: 20230708102932_keys.sql  20230708102938_ip_book.sql
src/: database.rs  lib.rs  main.rs  mpsc_bridge.rs  services.rs
src/database/: api_key.rs  ip_book.rs  mod.rs
