[package]
name = "metered_api_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.166", features = ["derive"] }
sqlx = {version = "0.7.0", features = ["sqlite", "runtime-tokio"]}
uuid = { version = "1.4.0", features = ["v4"] }
tokio = {version = "1", features = ["macros", "sync"]}
thiserror = "1.0.41"

